2005-02-10  Roland McGrath  <roland@redhat.com>

	[BZ #157]
	* include/libc-symbols.h (stub_warning): Emit a marker section called
	.gnu.glibc-stub.NAME.
	* Makerules ($(objpfx)stubs): Depend on object files, not dep files.
	Use objdump to collect those marker section names.
	($(common-objpfx)shlib.lds): Discard .gnu.glibc-stub.* sections.

	* Rules (subdir_objs, subdir_stubs): New phony targets.
	* Makefile (+subdir_targets): Add them.

	* Makerules ($(common-objpfx)Versions.all): Grok new leading column in
	soversions.i.

	* scripts/lib-names.awk: Consider [0-9].* a "number", not just [0-9]+.
	Reported by H.J. Lu <hongjiu.lu@intel.com>.

	* scripts/lib-names.awk: Always print WORDSIZE32 section first when
	doing two.

2005-02-10  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/bits/link.h: Removed.
	* sysdeps/powerpc/powerpc64/bits/link.h: Moved to...
	* sysdeps/powerpc/bits/link.h: ... here.  New file.

2005-02-09  Jakub Jelinek  <jakub@redhat.com>

	[BZ #710]
	* stdlib/random_r.c (__initstate_r): Save old state.
	* stdlib/Makefile (tests): Add tst-random2.
	* stdlib/tst-random2.c: New test.
	Reported by Peter Bergner <bergner@vnet.ibm.com>.

2005-01-25  H.J. Lu  <hongjiu.lu@intel.com>

	* dlfcn/dlfcn.c (init): Put it in .init_array section.

2005-02-10  Roland McGrath  <roland@redhat.com>

	[BZ #632]
	* scripts/soversions.awk: Expect cpu, vendor, os as separate variables
	from command line.
	Grok shlib-versions lines with WORDSIZE* in second column.
	Add new leading column to output, DEFAULT for existing output lines.
	Also emit lines with WORDSIZE* for alternate configurations.
	* Makeconfig ($(common-objpfx)soversions.i): Pass those variables.
	($(common-objpfx)soversions.mk): Grok new column, use only DEFAULT.
	($(common-objpfx)gnu/lib-names.stmp): Depend on soversions.i instead
	of soversions.mk; replace inline shell script with use of ...
	* scripts/lib-names.awk: New file.  If input has non-DEFAULT lines,